[workspace]
members  = ["crates/*"]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.1"


[workspace.dependencies]
# Member
tondi-scan-db  = { path = "crates/db", version = "0.1.1" }
tondi-scan-h2c = { path = "crates/h2c", version = "0.1.1" }
tondi-scan-h2s = { path = "crates/h2s", version = "0.1.1" }
tondi-scan-h3c = { path = "crates/h3c", version = "0.1.1" }
tondi-scan-lib = { path = "crates/lib", version = "0.1.1" }
tondi-scan-w2c = { path = "crates/w2c", version = "0.1.1" }
tondi-scan-w3c = { path = "crates/w3c", version = "0.1.1" }

# Extern
axum                       = { default-features = false, version = "0.8" }
bytes                      = { default-features = false, version = "1" }
console_error_panic_hook   = { default-features = false, version = "0.1" }
diesel                     = { default-features = false, version = "2.2" }
futures                    = { default-features = false, version = "0.3" }
gloo                       = { default-features = false, version = "0.11" }
hex                        = { default-features = false, package = "faster-hex", version = "0.10" }
http                       = { default-features = false, version = "1.3" }
http-body                  = { default-features = false, version = "1.0" }
http-body-util             = { default-features = false, version = "0.1" }
mimalloc                   = { default-features = false, version = "0.1" }
nill                       = { default-features = false, version = "=1.0" }
prost                      = { default-features = false, version = "0.14" }
rkyv                       = { default-features = false, version = "0.8" }
serde                      = { default-features = false, version = "1" }
serde_json                 = { default-features = false, version = "1" }
serde-wasm-bindgen         = { default-features = false, version = "0.6" }
thiserror                  = { default-features = false, version = "2.0" }
tokio                      = { default-features = false, version = "1" }
tonic                      = { default-features = false, version = "0.14" }
tonic-web                  = { default-features = false, version = "0.14" }
tower                      = { default-features = false, version = "0.5" }
tower-http                 = { default-features = false, version = "0.6" }
tracing                    = { default-features = false, version = "0.1" }
tracing-browser-subscriber = { default-features = false, version = "0.2" }
tracing-subscriber         = { default-features = false, version = "0.3" }
wasm-bindgen               = { default-features = false, version = "0.2" }
wasm-bindgen-futures       = { default-features = false, version = "0.4" }
wasm-streams               = { default-features = false, version = "0.4" }
web-sys                    = { default-features = false, version = "0.3" }

# Build
tonic-prost-build = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }


[package]
name = "tondi-scan"

description = "Tondi Scan - High-performance blockchain scanning service"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[dependencies]
tondi-scan-h2c = { workspace = true }
tondi-scan-h2s = { workspace = true }
tondi-scan-lib = { workspace = true }
tondi-scan-w2c = { workspace = true }


[workspace.lints.clippy]
as_conversions = "warn"
pedantic       = "warn"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
