[workspace]
members  = ["crates/*"]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.1"


[workspace.dependencies]
# Member
xscan-db  = { path = "crates/db", version = "0.1.1" }
xscan-h2c = { path = "crates/h2c", version = "0.1.1" }
xscan-h2s = { path = "crates/h2s", version = "0.1.1" }
xscan-lib = { path = "crates/lib", version = "0.1.1" }
xscan-w2c = { path = "crates/w2c", version = "0.1.1" }
xscan-w3c = { path = "crates/w3c", version = "0.1.1" }

# Extern
axum                       = { default-features = false, version = "0.8" }
bytes                      = { default-features = false, version = "1" }
console_error_panic_hook   = { default-features = false, version = "0.1" }
diesel                     = { default-features = false, version = "2.2" }
futures                    = { default-features = false, version = "0.3" }
gloo                       = { default-features = false, version = "0.11" }
hex                        = { default-features = false, package = "faster-hex", version = "0.10" }
http                       = { default-features = false, version = "1.3" }
http-body                  = { default-features = false, version = "1.0" }
http-body-util             = { default-features = false, version = "0.1" }
mimalloc                   = { default-features = false, version = "0.1" }
nill                       = { default-features = false, version = "=1.0" }
prost                      = { default-features = false, version = "0.14" }
rkyv                       = { default-features = false, version = "0.8" }
serde                      = { default-features = false, version = "1" }
serde-wasm-bindgen         = { default-features = false, version = "0.6" }
serde_json                 = { default-features = false, version = "1.0" }
thiserror                  = { default-features = false, version = "2.0" }
tokio                      = { default-features = false, version = "1" }
tonic                      = { default-features = false, version = "0.14" }
tonic-web                  = { default-features = false, version = "0.14" }
tower                      = { default-features = false, version = "0.5" }
tower-http                 = { default-features = false, version = "0.6" }
tracing                    = { default-features = false, version = "0.1" }
tracing-browser-subscriber = { default-features = false, version = "0.2" }
tracing-subscriber         = { default-features = false, version = "0.3" }
wasm-bindgen               = { default-features = false, version = "0.2" }
wasm-bindgen-futures       = { default-features = false, version = "0.4" }
wasm-streams               = { default-features = false, version = "0.4" }
web-sys                    = { default-features = false, version = "0.3" }

# Build
tonic-prost-build = { version = "0.14", default-features = false }


[package]
name = "xscan"

description = "xscan"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[dependencies]
xscan-h2c = { workspace = true }
xscan-h2s = { workspace = true }
xscan-lib = { workspace = true }
xscan-w2c = { workspace = true }


[workspace.lints.clippy]
as_conversions = "warn"
pedantic       = "warn"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
