[package]
name = "xscan-db"

description = "xscan-db"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default = []


[lints]
workspace = true


[dependencies]
xscan-lib = { workspace = true }

diesel    = { workspace = true, features = ["postgres", "r2d2"] }
hex       = { workspace = true, features = ["serde", "std"] }
serde     = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
