[package]
name = "tondi-listener-db"

description = "Tondi Scan Database Layer"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default = []


[lints]
workspace = true


[dependencies]
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "serde_json"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
hex = "0.4"
