[package]
name = "tondi-scan-h2c"

description = "Tondi Scan HTTP/2 Client"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default = []
gzip = []
router = []
transport = []
rkyv-codec = []


[lints]
workspace = true


[dependencies]
prost = { workspace = true }
tonic = { workspace = true, features = ["gzip", "transport"] }
tonic-web = { workspace = true }
tonic-prost = { workspace = true }


[build-dependencies]
tonic-prost-build = { workspace = true }
