[package]
name = "tondi-scan-h2s"

description = "Tondi Scan HTTP/2 Server"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default = []


[lints]
workspace = true


[dependencies]
nill = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["codegen"] }
tondi-scan-h2c = { workspace = true }


[build-dependencies]
