[package]
name = "tondi-scan-h3c"

description = "Tondi Scan HTTP/3 Client"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[dependencies]
tondi-scan-lib = { workspace = true }


[lints]
workspace = true


[build-dependencies]
