[package]
name = "tondi-listener-http2-server"

description = "Tondi Scan HTTP/2 Server"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default = []


[lints]
workspace = true


[dependencies]
nill = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["codegen"] }
tondi-listener-http2-client = { workspace = true }


[build-dependencies]
