[package]
name = "tondi-scan-http3-client"

description = "Tondi Scan HTTP/3 Client"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[dependencies]
tondi-scan-library = { workspace = true }


[lints]
workspace = true


[build-dependencies]
