[package]
name = "tondi-scan-server"

description = "Tondi Scan Server"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[lints]
workspace = true


[dependencies]
tondi-scan-db  = { workspace = true }
tondi-scan-http2-client = { workspace = true, features = ["gzip", "router", "transport"] }
tondi-scan-http2-server = { workspace = true }
tondi-scan-library = { workspace = true, features = ["mimalloc"] }

axum       = { workspace = true, features = ["http2", "json", "query", "tokio", "tracing", "ws"] }
futures    = { workspace = true }
nill       = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tower      = { workspace = true, features = ["load-shed"] }
tower-http = { workspace = true, features = ["cors", "timeout", "trace", "compression-full", "limit"] }
http       = { workspace = true }

tondi-grpc-client = { version = "0.17.0", git = "ssh://git@github.com/AvatoLabs/Tondi.git", branch = "main" }
tondi-grpc-core   = { version = "0.17.0", git = "ssh://github.com/AvatoLabs/Tondi.git", branch = "main" }
tondi-notify      = { version = "0.17.0", git = "ssh://git@github.com/AvatoLabs/Tondi.git", branch = "main" }
tondi-rpc-core    = { version = "0.17.0", git = "ssh://git@github.com/AvatoLabs/Tondi.git", branch = "main" }
tondi-utils       = { version = "0.17.0", git = "ssh://git@github.com/AvatoLabs/Tondi.git", branch = "main" }


[build-dependencies]
