[package]
name = "xscan-w2c"

description = "xscan-w2c"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []

console-backtrace = ["dep:console_error_panic_hook"]


[lints]
workspace = true


[dependencies]
xscan-h2c = { workspace = true, features = ["gzip"] }
xscan-lib = { workspace = true, features = ["tracing-browser"] }

bytes                    = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
futures                  = { workspace = true, features = ["alloc"] }
gloo                     = { workspace = true, features = ["net"] }
http                     = { workspace = true }
http-body                = { workspace = true }
http-body-util           = { workspace = true }
nill                     = { workspace = true }
thiserror                = { workspace = true }
tower                    = { workspace = true }
wasm-bindgen             = { workspace = true }
wasm-bindgen-futures     = { workspace = true }
wasm-streams             = { workspace = true }
web-sys                  = { workspace = true }


[build-dependencies]
