[package]
name = "tondi-scan-w3c"

description = "Tondi Scan WebAssembly Components"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[dependencies]
wasm-bindgen = { workspace = true }


[lints]
workspace = true


[build-dependencies]
