[package]
name = "tondi-scan-wasm2-client"

description = "Tondi Scan WebAssembly Client"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[dependencies]
tondi-scan-http2-client = { workspace = true }
tondi-scan-library = { workspace = true, features = ["tracing-browser"] }

console_error_panic_hook = { workspace = true }
futures = { workspace = true }
gloo = { workspace = true, features = ["futures", "net"] }
nill = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-streams = { workspace = true }
web-sys = { workspace = true, features = ["WebSocket", "MessageEvent", "CloseEvent", "Request", "RequestInit", "RequestMode", "Response"] }


[lints]
workspace = true
