[package]
name = "tondi-scan-wasm2-client"

description = "Tondi Scan WebAssembly Client"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[dependencies]
tondi-scan-library = { workspace = true, features = ["tracing-browser"] }
tondi-wrpc-wasm = { version = "0.17.0", git = "ssh://git@github.com/AvatoLabs/Tondi.git", branch = "main", features = ["wasm32-sdk"] }
tondi-addresses = { version = "0.17.0", git = "ssh://git@github.com/AvatoLabs/Tondi.git", branch = "main" }

console_error_panic_hook = { workspace = true }
futures = { workspace = true }
gloo = { workspace = true, features = ["futures", "net"] }
js-sys = "0.3"
nill = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.3"
web-sys = { workspace = true, features = ["WebSocket", "MessageEvent", "CloseEvent", "Request", "RequestInit", "RequestMode", "Response"] }
workflow-rpc = "0.18.0"
log = "0.4"


[lints]
workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
