[package]
name = "tondi-listener-wasm3-client"

description = "Tondi Listener WebAssembly Components"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[features]
default = []


[dependencies]
wasm-bindgen = { workspace = true }


[lints]
workspace = true


[build-dependencies]
